edicion de los estilos

--- a/src/App.css
+++ b/src/App.css
@@ -17,12 +17,13 @@
 }
 
 .tarea {
-    font-size: 18px;
     background-color: #86a6a1;
+    height: 50px;
     color: black;
 }
 
 .tarea-options {
+    padding: 5px;
     display: flex;
     gap: 10px;
 }
