modificación de estilos

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,12 @@
     gap: 10px;
 }
 
+.tarea-completada {
+    text-decoration: line-through;
+    background-color: #86a6a1;
+    color: red;
+}
+
 .subtarea {
     background-color: #56686e;
 }
