--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
     gap: 10px;
 }
 
@@ -18,7 +19,7 @@
 
 .tarea {
     background-color: #86a6a1;
-    height: 60px;
+    height: auto;
     color: black;
 }
 
