--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: auto;
-    gap: 10px;
+    grid-template-columns: 60%;
 }
 
 .tarea-container {
