--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
 .container {
     display: grid;
-    grid-template-columns: 30%;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
 }
 
 .tarea-container {
+    display: block;
     padding-left: 10px;
     background-color: #384554;
     color: #a195ba;
+    width: 500px;
 }
 
 .tareas {
